examples/errors/assign_to_pointer.alan
main(): proc
    x: int[100];
{
    x = 42;
}